--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,10 @@
+Fri Mar 19 13:28:04 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* sfidl.cc: Don't use optind any longer, since we also don't use
+	getopt() any longer. This fixes compilation on systems where optind
+	is not declared in those header files sfidl.cc directly/indirectly
+	includes.
+
 Tue Mar  2 11:09:48 2004  Tim Janik  <timj@gtk.org>
 
 	* sfidl-corecxx.cc: fixed choice serialization type in to_rec() impls.
