update SuSE version of RPMS.
Sat Mar 27 03:34:23 2004  Tim Janik  <timj@gtk.org>

        * docs/site-download.texi: update SuSE version of RPMS.

svn path=/trunk/; revision=2120

--- a/docs/site-download.texi
+++ b/docs/site-download.texi
@@ -53,7 +53,7 @@ $ apt-get install beast
 @end example
 should do.
 
-For SuSE 8.2,
+For SuSE,
 @uref{mailto://gwaluga@@computerbraxas.de,,Gregor Waluga}
 has written a small
 @uref{http://linux.waluga.de/beast/beast-install-howto.htm,,HOWTO in english and german}
