--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 FIXMES:
+- need midi keyboard demo .bse file to be easily loadable (via demo/ menu)
+- take a look at the cdrecord source for their __dtoa() implementation
 - fix gxkutils.c:3166: undefined reference to `uncompress'
 - if mmap() is available, write autosave.bse to it every couple minutes (no need to flush unless crashes take the data with them)
 - work around "/opt/bin/beast-0.6.1: relocation error: /opt/bin/beast-0.6.1: undefined symbol: _gtk_window_activate_key" with gtk+-2.4
