--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Apr  3 16:40:12 2004  Adam Weinberger  <adamw@gnome.org>
+
+	* configure.in: Added en_CA to ALL_LINGUAS.
+
 Sat Mar 27 03:34:23 2004  Tim Janik  <timj@gtk.org>
 
 	* docs/site-download.texi: update SuSE version of RPMS.
