--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-03  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Added Canadian English translation.
+
 2004-03-22  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation by
