--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-08  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Added British English translation
+
 2004-04-03  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Added Canadian English translation.
