--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr  9 09:55:22 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/site-development.texi: added links for en_CA and en_GB.
+	fixed link for sr@@Latn to point to sr stats.
+
 2004-04-08  Gareth Owen  <gowen72@yahoo.com>
 
 	* configure.in: Added en_GB to ALL_LINGUAS
