--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr  9 10:18:02 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/site-links-synthesis.texi: link updates.
+
 Fri Apr  9 09:55:22 2004  Tim Janik  <timj@gtk.org>
 
 	* docs/site-development.texi: added links for en_CA and en_GB.
