--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-10  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spansih translation.
+
 2004-04-08  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Added British English translation
