--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-12  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-04-10  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Added Canadian English translation.
