--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-14  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2004-04-12  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Updated British English translation
