--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+- make channel blurbs and module names have the same font in router display
 - need midi keyboard demo .bse file to be easily loadable (via demo/ menu)
 - take a look at the cdrecord source for their __dtoa() implementation
 - if mmap() is available, write autosave.bse to it every couple minutes (no need to flush unless crashes take the data with them)
