--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr 23 19:26:04 2004  Tim Janik  <timj@gtk.org>
+
+	* ru.po: translation updates from
+	Alexandre Prokoudine <techwriter@land.ru>.
+
 2004-04-14  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
