--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr 29 21:36:47 2004  Tim Janik  <timj@gtk.org>
+
+	* ru.po: translation updates from Alexandre Prokoudine.
+
 Fri Apr 23 19:26:04 2004  Tim Janik  <timj@gtk.org>
 
 	* ru.po: translation updates from
