--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr 30 09:13:47 2004  Tim Janik  <timj@gtk.org>
+
+	* glib-extra.h: small glib-2.4.0 compat addition.
+
 Sun Apr 25 18:07:13 2004  Tim Janik  <timj@gtk.org>
 
 	* sfithreads.c (thread_get_tid): minor preprocessor condition fix.
