--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sun May  2 14:50:25 2004  Tim Janik  <timj@gtk.org>
+
+	* gslopmaster.c: clean up debugging code, minor ops.
+
 Fri Apr  9 12:04:19 2004  Tim Janik  <timj@gtk.org>
 
 	* tests/testwavechunk.c (run_tests): allocate large structures on the
